# SentielAI

./: README.md
SentielAI/: README.md  analyzer.py  assistant.py  cli.py  config.py  main.py  parser.py  scanner.py
SentielAI v2/: README.md  __init__.py  __main__.py  analyzer.py  attack_surface_scorer.py  cli.py  config.py  exploit_advisor.py  knowledge_base.py  main.py  pyproject.toml  requirements.txt  scan_memory.py  setup.py  smb_enum.py  ssh_analysis.py  subdomain_enum.py  tool_orchestrator.py
SentielAI v2/database/: db.py  targets.db
SentielAI v2/reporting/: report_generator.py
SentielAI2.2/SentielAI/SentielAI v2/: app.py  assistant.py  cli_ext.py  cve_lookup.py  dashboard.html  llm_reasoning.py  parser.py  pattern_recognizer.py  scanner.py  self_learning.py  web_enum.py
SentielAI2.2/SentielAI/SentielAI v2/database/: targets.db
SentielAI2.2/SentielAI/SentielAI v2/scans/: 192.168.1.120_full_20260306_154631.txt  192.168.1.120_full_20260306_154631.xml  192.168.1.120_os_20260306_155426.txt  192.168.1.120_os_20260306_155426.xml  192.168.1.120_quick_20260306_154630.txt  192.168.1.120_quick_20260306_154630.xml  192.168.1.120_vuln_20260306_154855.txt  192.168.1.120_vuln_20260306_154855.xml
