[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sentinelai"
version = "2.0.0"
description = "SentinelAI — Advanced Recon Assistant"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
]

[project.optional-dependencies]
dashboard = ["flask>=3.0"]
ai        = ["openai>=1.0"]
full      = ["flask>=3.0", "openai>=1.0"]

[project.scripts]
sentinelai = "sentinelai.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinelai*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.md", "*.json"]
